# itia_utilities

./: README.md  contributors.txt  dependency.txt
itia_butils/: CMakeLists.txt  package.xml
itia_butils/include/itia_butils/: itia_butils.h
itia_butils/src/: itia_butils.cpp
itia_futils/: CMakeLists.txt  package.xml
itia_futils/include/itia_futils/: itia_futils.h  string.h
itia_futils/src/: itia_futils.cpp
itia_gutils/: CMakeLists.txt  package.xml
itia_gutils/include/itia_gutils/: EigenKDL.h  itia_gutils.h
itia_gutils/src/: itia_gutils.cpp  itia_gutils_node.cpp
itia_mutils/: CMakeLists.txt  package.xml
itia_mutils/cfg/: test_quadprog.yaml
itia_mutils/include/itia_mutils/: frame_distance.h  norm_derivative.h  object_on_plane_estimation.h  polynomial_utils.h  quadprog_pc.h  quaternion.h
itia_mutils/src/: eigenqp_test.cpp  itia_mutils_node.cpp  polynomial_test.cpp
itia_mutils/src/itia_mutils/: polynomial_utils.cpp
itia_rutils/: CMakeLists.txt  package.xml
itia_rutils/include/itia_rutils/: itia_conversions.h  itia_dynpar.h  itia_rutils.h  itia_rutils_log_message.h  itia_rutils_xmlrpc.h  itia_rutils_yaml.h  itia_tf_receiver.h
itia_rutils/src/: itia_rutils.cpp
itia_sutils/: CMakeLists.txt  itia_sutils.kdev4  package.xml
itia_sutils/.kdev4/: itia_sutils.kdev4
itia_sutils/include/itia_sutils/: udp_client_server.h
itia_sutils/src/: itia_sutils_node.cpp
itia_sutils/src/itia_sutils/: udp_client_server.cpp
itia_tutils/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
itia_tutils/include/itia_tutils/: itia_linear_movement.h  itia_spiral_movement.h  itia_tutils.h
itia_tutils/src/: itia_tutils.cpp  trajection_action_client.cpp
itia_utilities/: CMakeLists.txt  package.xml
