<?xml version="1.0"?>
<package>
  <name>itia_rutils</name>
  <version>0.0.1</version>
  <description>The itia_rutils package: utilities for ROS</description>

  <maintainer email="manuel.beschi@itia.cnr.it">hegel</maintainer>

  <license>TODO</license>
  <url type="website">https://bitbucket.org/CNR-ITIA/itia_utils</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>itia_msgs</build_depend>
  <build_depend>itia_futils</build_depend>
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>itia_msgs</run_depend>
  <run_depend>itia_futils</run_depend>
  
  <export>
  </export>
</package>